--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DevInfo</string>
+    <string name="app_name">Device Info</string>
     
     <!-- Navigation -->
     <string name="nav_home">Home</string>
